syntax = "proto3";

package Aiko.common.protocol;
option csharp_namespace = "Aiko.Common.Protocol";
option go_package = "github.com/Github-Aiko/Aiko-Core/common/protocol";
option java_package = "com.Aiko.common.protocol";
option java_multiple_files = true;

import "common/net/address.proto";
import "common/protocol/user.proto";

message ServerEndpoint {
  Aiko.common.net.IPOrDomain address = 1;
  uint32 port = 2;
  repeated Aiko.common.protocol.User user = 3;
}
