syntax = "proto3";

package Aiko.proxy.dokodemo;
option csharp_namespace = "Aiko.Proxy.Dokodemo";
option go_package = "github.com/Github-Aiko/Aiko-Core/proxy/dokodemo";
option java_package = "com.Aiko.proxy.dokodemo";
option java_multiple_files = true;

import "common/net/address.proto";
import "common/net/network.proto";

message Config {
  Aiko.common.net.IPOrDomain address = 1;
  uint32 port = 2;

  // List of networks that the Dokodemo accepts.
  // Deprecated. Use networks.
  Aiko.common.net.NetworkList network_list = 3 [deprecated = true];
  // List of networks that the Dokodemo accepts.
  repeated Aiko.common.net.Network networks = 7;

  uint32 timeout = 4 [deprecated = true];
  bool follow_redirect = 5;
  uint32 user_level = 6;
}
